--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -30,8 +30,10 @@ body {
     font-size: 18px;
     line-height: 34px;
     color: #777;
-    background: url(./assets/images/back.png);
+    background: url("../images/back.png");
     height: 100%;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 #masthead {
     position: fixed;
